logs/compile.log
affichage.c: In function ‘affichePlateauSDL’:
affichage.c:76:27: warning: variable ‘couleur’ set but not used [-Wunused-but-set-variable]
     int largeur, hauteur, couleur;
                           ^
init.c:244:5: error: conflicting types for ‘chercheFourmiliere’
 int chercheFourmiliere(Fourmi *fourmi) {
     ^
In file included from init.c:7:0:
init.h:14:9: note: previous declaration of ‘chercheFourmiliere’ was here
     int chercheFourmiliere(Fourmi *fourmi, Monde *myWorld);
         ^
jeu.c: In function ‘sauvegarde’:
jeu.c:18:17: warning: format ‘%d’ expects argument of type ‘int’, but argument 3 has type ‘struct Fourmi *’ [-Wformat=]
                 fprintf (file, "%d %d %d %d %d\n", temp -> origine, temp -> type, temp -> couleur, temp -> position, temp-> instruction);
                 ^
jeu.c:28:17: warning: format ‘%d’ expects argument of type ‘int’, but argument 3 has type ‘struct Fourmi *’ [-Wformat=]
                 fprintf (file, "%d %d %d %d %d\n", temp -> origine, temp -> type, temp -> couleur, temp -> position, temp-> instruction);
                 ^
